Adjusted the height and width of the volume sliders, increased size of the volume icons, fixed the footer to always be positioned at the bottom of the webpage, added webkit media controls to see if it removes playback button on mobile devices.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,8 @@
 /* --------------------------------------------------------------------------Body structure */
 
 html, body {
-    max-width: 100%;
+    width: 100%; 
+    height: 100%; 
     overflow-x: hidden;
 }
 
@@ -98,10 +99,9 @@ h1, h2, h3, h4, h5, h6, p {
 
 .footer {
     /* Got help from freeCodeCamp on how to keep the footer at the bottom of the page */
-    bottom: 0;
+    position: relative;
     width: 100%;
-    height: 6rem;
-    background: #299cab;
+    height: 5rem;
     margin-top: 50px;
     padding-top: 10px;
     /* /Got help from freeCodeCamp on how to keep the footer at the bottom of the page */
@@ -113,6 +113,10 @@ h1, h2, h3, h4, h5, h6, p {
 
 .disclaimer a {
     color: #f2feff;
+}
+
+.footer i:hover {
+    color: #299cab;
 }
 
 /* --------------------------------------------------------------------------Main section for all HTMLs */
@@ -129,12 +133,24 @@ h1, h2, h3, h4, h5, h6, p {
 
 /* --------------------------------------------------------------------------Volume slider section */
 
+#volume-nature, #volume-travel, #volume-public {
+    width: 65%;
+}
+
+#volume-home, #volume-weather {
+    width: 40%;
+}
+
+.fa-volume-down, .fa-volume-up {
+    font-size: 120%;
+}
+
 /* All the code relating to input type range is taken from CSS Portal, with color adjustments */
 input[type=range] {
-    height: 25px;
+    height: 15px;
     -webkit-appearance: none;
     margin: 10px 0;
-    width: 70%;
+    width: 100%;
     background-color: transparent;
   }
   input[type=range]:focus {
@@ -313,6 +329,16 @@ input[type=range] {
     height: 100%;
     z-index: -5;
 }
+
+video:-webkit-media-controls {
+    display:none !important;
+}
+
+video:-webkit-media-controls-start-playback-button {
+    display: none!important;
+    -webkit-appearance: none;
+}
+
 
 /* --------------------------------------------------------------------------How To Use section */
 
